# MilnerTrans

./: MilnerTrans.cabal  README.md
src/: Lexer.x  Main.hs  Parser.y  Syntax.hs  Trans.hs  Util.hs
